--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head> 
   <meta charset="utf-8">
-  <title>Excerts From Select Public Domain Books</title>
+  <title>Excerpts From Select Public Domain Books</title>
 </head>
 
 <body>
